<resources>
    <string name="action_login">Login</string>
    <string name="action_reset">Send Reset Email</string>

    <string name="action_register">Register</string>
    <string name="action_save_observation">save observation</string>
    <string name="app_name">FeatherFinder</string>
    <string name="bird_species">Bird Species</string>
    <string name="date">Date</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="feather_finder">Feather Finder</string>
    <string name="feather_finder_icon">feather finder icon</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login">Login</string>
    <string name="notes">other notes</string>
    <string name="pos">Position(replace with map)</string>
    <string name="preference_header">Preference</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="register">Register</string>
    <string name="time">Time</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="welcome_back">Welcome back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password_explanation">Enter your username or e-mail address we\'ll\nsend you a email to reset your password</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ui">UI</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="home">Home</string>
    <string name="invalid_empty_email">Email can\'t be empty</string>
    <string name="invalid_empty_password">Password can\'t be empty</string>
    <string name="invalid_empty_username">Username can\'t be empty</string>
    <string name="invalid_empty_confirm_password">Confirm password can\'t be empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be 6 long</string>
    <string name="invalid_username">Username must be at least 8 long</string>
    <string name="invalid_confirm_password">Passwords do not match</string>
    <string name="goal_name">Goal name</string>
    <string name="invalid_empty_goal_name">Goal name can\'t be empty</string>
    <string name="invalid_empty_species_name">Species name can\'t be empty</string>
    <string name="invalid_empty_date">Date name can\'t be empty</string>
    <string name="invalid_empty_time">Time name can\'t be empty</string>
    <string name="invalid_empty_position">Position name can\'t be empty</string>


    <string name="goal_info">Goal info</string>
    <string name="all_goals">All goals</string>
    <string name="add_goal">Add goal</string>
    <string name="hotspot_info">Hotspot info</string>
    <string name="route">Route</string>
    <string name="nearby_hotspots">Nearby hotspots</string>
    <string name="observation_list">Observation list</string>
    <string name="add_observation">Add observation</string>
    <string name="observation_detail">Observation details</string>
    <string name="goal_list_empty">Goal list is empty create a goal below</string>
    <string name="observation_list_empty">Observation list is empty create a observation below</string>
    <string name="add_a_goal">Add a Goal</string>


    <string name="profile">Profile</string>
    <string name="observations">Observations</string>
    <string name="map">Map</string>
    <string name="bird_info">Birding Sounds</string>
    <string name="add_an_observation">add an observation</string>
    <string name="logout">Logout</string>
    <string name="bird_info_empty">Bird info is empty (TODO: change me)</string>
    <string name="bird_info_load">Bird info loading</string>
    <string name="gear_icon_descr">Gear icon description</string>
    <string name="goal_icon_descr">Goal icon description</string>
    <string name="ach_icon_descr">Achievements icon description</string>
    <string name="settings">Settings</string>
    <string name="goals">Goals</string>
    <string name="achievements">Achievements</string>
    <string name="save_goal_action">Save goal</string>
    <string name="goal_info_empty">Goal info empty</string>
    <string name="goal_load">Loading goals</string>
    <string name="add_observations">Add Observations</string>
    <string name="goals_list">Goals List</string>
    <string name="icon_of_bird">Icon of bird in observation</string>
    <string name="bird_name_template">Bird Name</string>
    <string name="bird_details_template">Bird Details</string>
    <string name="goal">goal</string>
    <string name="observation_1">Observation 1</string>
    <string name="observation_1_detail">observation 1 detail</string>
    <string name="measurement_system_preference">Measurement System Preference</string>
    <string name="maximum_distance">Maximum Distance</string>
    <string name="save_settings_action">Save Settings</string>
    <string name="birdsounds">BirdSounds</string>
    <string name="explore_bird_sounds">Explore bird sounds</string>
    <string name="view_this_page">View this page</string>
    <string name="browse_map">Browse the map to find birding hotspots</string>
    <string name="view_and_capture">View and capture bird sightings</string>
    <string name="manage_your_profile">Manage your profile</string>
    <string name="app_info">Welcome to our Feather Finder!\nDiscover the enchanting world of birding. Select from the bottom menu to:</string>
    <string name="unlocked">Unlocked</string>
    <string name="locked">Locked</string>
    <string name="achievement_1">Achievement Example 1 with a lot of extra text </string>
    <string name="achievement_1_detail">Log in 3 days in a row wow this will be a lot to render maybe more than 2 lines maybe it will even be longer than 3 lines</string>
    <string name="days_left">Days Left: %1$s</string>
    <string name="statistics">Statistics</string>
    <string name="upcoming_goal">Upcoming Goal</string>


</resources>