<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <!-- TODO: Home Fragment ???-->

    <!--Goal-->
    <fragment
        android:id="@+id/navigation_all_goals"
        android:name="com.ryanblignaut.featherfinder.ui.goal.AllGoals"
        android:label="@string/all_goals"
        tools:layout="@layout/fragment_goal_list">
        <action
            android:id="@+id/action_all_goals_to_add_goal"
            app:destination="@id/navigation_add_goal"
            app:enterAnim="@anim/fade"
            app:exitAnim="@anim/fade" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_goal"
        android:name="com.ryanblignaut.featherfinder.ui.goal.AddGoal"
        android:label="@string/add_goal"
        tools:layout="@layout/fragment_goal_add" />

    <!--Home-->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ryanblignaut.featherfinder.ui.home.Home"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <!--Map-->
    <fragment
        android:id="@+id/navigation_hotspot_info"
        android:name="com.ryanblignaut.featherfinder.ui.map.HotspotInfo"
        android:label="@string/hotspot_info"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_route"
        android:name="com.ryanblignaut.featherfinder.ui.map.RouteBirding"
        android:label="@string/route"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_nearby_hotspots"
        android:name="com.ryanblignaut.featherfinder.ui.map.NearbyBirding"
        android:label="@string/nearby_hotspots"
        tools:layout="@layout/fragment_map" />

    <!--Observation-->
    <fragment
        android:id="@+id/navigation_add_observation"
        android:name="com.ryanblignaut.featherfinder.ui.observation.ObservationAdd"
        android:label="@string/add_observation"
        tools:layout="@layout/fragment_observation_add" />
    <fragment
        android:id="@+id/navigation_observation_list"
        android:name="com.ryanblignaut.featherfinder.ui.observation.ObservationList"
        android:label="@string/observation_list"
        tools:layout="@layout/fragment_observation_list">
        <action
            android:id="@+id/action_observation_list_to_observation_detail"
            app:destination="@id/navigation_observation_detail"
            app:enterAnim="@anim/fade"
            app:exitAnim="@anim/fade" >

        </action>
        <action
            android:id="@+id/action_navigation_observation_list_to_navigation_add_observation"
            app:destination="@id/navigation_add_observation" />
    </fragment>
    <fragment
        android:id="@+id/navigation_observation_detail"
        android:name="com.ryanblignaut.featherfinder.ui.observation.ObservationDetail"
        android:label="@string/observation_detail"
        tools:layout="@layout/fragment_observation_detail">
        <argument
            android:name="observation_id"
            app:argType="string" />
        <argument
            android:name="date"
            app:argType="string" />
        <argument
            android:name="birdSpecies"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bird_info"
        android:name="com.ryanblignaut.featherfinder.ui.education.BirdInfoFragment"
        android:label="@string/bird_info"
        tools:layout="@layout/fragment_bird_info_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ryanblignaut.featherfinder.ui.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_settingsFragment"
            app:destination="@id/navigation_settings"
            app:enterAnim="@anim/fade"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_achievement"
        android:name="com.ryanblignaut.featherfinder.ui.achievement.ViewAchievements"
        android:label="@string/achievements"
        tools:layout="@layout/fragment_all_achievements" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ryanblignaut.featherfinder.ui.settings.SettingsFragment"
        android:label="SettingsFragment"
        tools:layout="@layout/fragment_set"/>

    <!--  <fragment
          android:id="@+id/navigation_profile"
          android:name="com.ryanblignaut.featherfinder.ui.ProfileFragment"
          android:label="@string/home"
          tools:layout="@layout/fragment_profile" />

      <fragment
          android:id="@+id/navigation_bird_info"
          android:name="com.ryanblignaut.featherfinder.ui.education.BirdInfoFragment"
          android:label="@string/home"
          tools:layout="@layout/fragment_bird_info" />-->

</navigation>