<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:padding="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/mint"
            android:padding="12dp"
            android:text="@string/add_observations"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/speciesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.MaterialAutoCompleteTextView>

            <com.ryanblignaut.featherfinder.ui.component.TextInput
                android:id="@+id/bird_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/bird_species"
                app:icon="@drawable/bird_mint_02" />

            <com.ryanblignaut.featherfinder.ui.component.DatePickerInput
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/date"
                app:icon="@drawable/date_mint" />

            <com.ryanblignaut.featherfinder.ui.component.TimePickerInput
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/time"
                app:icon="@drawable/time_mint" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/myLocSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="Use current location? " />

            <TextView
                android:id="@+id/generalLocationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/miniMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                app:compHeight="128dp"
                app:hint="@string/pos"
                app:icon="@drawable/map_mint">

            </androidx.fragment.app.FragmentContainerView>


            <com.ryanblignaut.featherfinder.ui.component.TextInput
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/notes"
                app:icon="@drawable/note_mint"
                app:large="true" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_observation_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/action_save_observation" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>