<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/goal_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardBackgroundColor="?attr/cardBackgroundOnCard"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/goal"
            android:src="@drawable/goal_mint"
            android:layout_gravity="start|center_vertical"
            android:paddingHorizontal="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start">

            <TextView
                android:id="@+id/goal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/goal_name"
                android:textSize="32sp"
                app:startIconDrawable="@drawable/goal_mint"
                app:startIconTint="@color/mint" />

            <TextView
                android:id="@+id/goal_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:ellipsize="end"
                android:hint="@string/goal_info"
                android:textSize="16sp"
                app:startIconDrawable="@drawable/goal_mint"
                app:startIconTint="@color/mint"
                android:paddingHorizontal="8dp"/>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>