<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/achievement_item_card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardBackgroundColor="?attr/cardBackgroundOnCard"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/achievement_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/achievements"
            android:paddingHorizontal="12dp"
            android:src="@drawable/achievement_mint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/achievement_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/achievement_1"
                android:maxLines="1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/achievement_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:hint="@string/achievement_1_detail"
                android:maxLines="3"
                android:paddingHorizontal="8dp"
                android:textSize="16sp"
                app:startIconDrawable="@drawable/goal_mint"
                app:startIconTint="@color/mint" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>