<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <!-- <PreferenceCategory app:title="@string/preference_header">

         <SwitchPreference
             android:defaultValue="true"
             android:key="metric_system"
             android:summary="Use the metric system"
             android:title="Metric System" />

         <ListPreference
             android:defaultValue="1"
             android:entries="@array/metric_system_entries"
             android:entryValues="@array/metric_system_values"
             android:key="metric_system"
             android:summary="Choose the preferred system of units"
             android:title="Metric System" />
         &lt;!&ndash;android:icon="@drawable/ic_system"&ndash;&gt;
         <EditTextPreference
             android:defaultValue="100"
             android:dialogTitle="Enter a distance"
             android:inputType="number"
             android:key="max_distance"
             android:summary="Set the maximum distance"
             android:title="Maximum Distance" />
         &lt;!&ndash;android:icon="@drawable/ic_distance"&ndash;&gt;
     </PreferenceCategory>
     <PreferenceCategory app:title="@string/messages_header">

         <ListPreference
             app:defaultValue="reply"
             app:entries="@array/reply_entries"
             app:entryValues="@array/reply_values"
             app:key="reply"
             app:title="@string/reply_title"
             app:useSimpleSummaryProvider="true" />

     </PreferenceCategory>
     <PreferenceCategory app:title="@string/sync_header">

         <SwitchPreferenceCompat
             app:key="sync"
             app:title="@string/sync_title" />

         <SwitchPreferenceCompat
             app:dependency="sync"
             app:key="attachment"
             app:summaryOff="@string/attachment_summary_off"
             app:summaryOn="@string/attachment_summary_on"
             app:title="@string/attachment_title" />

     </PreferenceCategory>
     <PreferenceCategory app:title="@string/ui">
         <ListPreference
             app:defaultValue="@string/dark_mode_def_value"
             app:entries="@array/dark_mode_entries"
             app:entryValues="@array/dark_mode_values"
             app:key="@string/dark_mode"
             app:title="@string/dark_mode" />
     </PreferenceCategory>-->
    <PreferenceCategory app:title="@string/ui">

        <ListPreference
            app:defaultValue="@string/dark_mode_def_value"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_values"
            app:key="@string/dark_mode"
            app:title="@string/dark_mode"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>